--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <a class="navbar-brand" href="#">Geo-Trend News</a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Politics</a></li>
+        <ul class="nav navbar-nav" id="topic-list">
+          <!-- <li class="active"><a href="#">Politics</a></li>
           <li><a href="#">Money</a></li>
           <li><a href="#">Health</a></li>
           <li><a href="#">Entertainment</a></li>
@@ -32,7 +32,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#">Sign Up</a></li>
-          <li><a href="#">Login</a></li>
+          <li><a href="#">Login</a></li> -->
         </ul>
       </div>
     </div>
@@ -83,9 +83,10 @@
         </div>
       </div>
 
-      <div class="col-sm-9">
-        <img src="assets/images/world-map.jpg">
-
+      <div class="img-map col-sm-9">
+        <ul id="country-list">
+          
+        </ul>
 
       </div>
     </div>
@@ -152,6 +153,8 @@
   <footer class="container-fluid">
     <p>Footer Text</p>
   </footer>
+
+  <script type="text/javascript" src="assets/javascript/app.js" ></script>
 
 </body>
 </html>
