sets up News API and Ajax call

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <div class="col-sm-3 sidenav text-left">
         <h4>TRENDING ON SOCIAL</h4>
       </div>
-      <div class="col-sm-6 text-left scroll"> 
+      <div id="top-news" class="col-sm-6 text-left scroll"> 
         <h4><small>TOP NEWS</small></h4>
         <hr>
         <h3>This is a News Story</h3>
