--- a/index.html
+++ b/index.html
@@ -1,48 +1,133 @@
-<!DOCTYPE html>
+```<!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Geo-Trending News</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <!-- Bootstrap 4 -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+  <!-- Stylesheet -->
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 
-  <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>                        
-        </button>
-        <a class="navbar-brand" href="#">Geo-Trend News</a>
-      </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav" id="topic-list">
-          <!-- <li class="active"><a href="#">Politics</a></li>
-          <li><a href="#">Money</a></li>
-          <li><a href="#">Health</a></li>
-          <li><a href="#">Entertainment</a></li>
-          <li><a href="#">Tech</a></li>
-          <li><a href="#">Sports</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Sign Up</a></li>
-          <li><a href="#">Login</a></li> -->
-        </ul>
-      </div>
+  <nav class="navbar navbar-toggleable-md navbar-light bg-faded mb-3">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand" href="#">Geo-Trending News</a>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">My Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About Us</a>
+        </li>
+      </ul>
+      <span class="navbar-text">
+        Some message / text here
+      </span>
     </div>
   </nav>
 
+  <section id="main-content-wrapper">
+    <div class="row"> <!-- R1 Start -->
+      <div class="col-md-3"> <!-- R1C1 Start -->
+        <div class="card">
+          <h2 id="breaking-news" class="my-1"> Breaking News </h2>
+          <div id="breaking-news-box"> 
+            <div>Article Title</div>
+            <div>Published Date</div>
+            <div>Article Snippet</div>
+            <div>Article URL</div>
+          </div>
+        </div>
+        <!-- <div id="breaking-news-carousel" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="breaking-news-carousel" data-slide-to="0" class="active"></li>
+            <li data-target="breaking-news-carousel" data-slide-to="1"></li>
+            <li data-target="breaking-news-carousel" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+              <img class="d-block img-fluid" src="" alt="Breaking News Article 1">
+              <div class="carousel-caption d-none d-md-block">
+                <h3> Title of B1 </h3>
+                <p> Summary of B1 Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia...Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia...Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia...<p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="" alt="Breakign News Article 2">
+              <div class="carousel-caption d-none d-md-block">
+                <h3> Title of B2 </h3>
+                <p> Summary of B2 Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia...Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia...Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia... <p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="" alt="Breaking News Article 3">
+              <div class="carousel-caption d-none d-md-block">
+                <h3> Title of B3 </h3>
+                <p> Summary of B3 Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia...Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia...Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia... <p>
+              </div>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#breaking-news-carousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#breaking-news-carousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div> <!-- End carousel -->
 
-  <div class="container-fluid">
+      </div> <!-- R1C1 Start -->
+      <div class="col-md-9"> <!-- R1C2 Start -->
+        <div class="row"> <!-- R1-R1 Start -->
+          <div class="col-md-12"> <!-- R1-R1C1 Start -->
+            <div id="map-box" class="img-map img-thumbnail">
+            </div>
+            <ul id="country-list">
+              Country list here
+            </ul>
+          </div> <!-- R1-R1C1 End -->  
+        </div> <!-- R1-R1 End -->
+        <div class="row"> <!-- R1-R2 Start -->
+          <div class="col-md-12"> <!-- R1-R2C1 Start -->
+            <ul id="topic-list" class="main-content">
+              Topics here
+            </ul>
+          </div> <!-- R1-R2C1 End -->
+        </div> <!-- R1-R2 End -->
+        <div class="row my-1"> <!-- R1-R3 Start -->
+          <div class="col-md-12"> <!-- R1-R3C1 Start -->
+            <div id="current-search-box" class="main-content">
+              Current search items here
+            </div>
+          </div> <!-- R1-R3C1 End -->
+        </div> <!-- R1-R3 End -->
+        <div class="row my-1"> <!-- R1-R4 Start -->
+          <div class="col-md-12"> <!-- R1-R4C1 Start -->
+            <div id="article-box" class="main-content">
+              Articles here
+            </div> 
+          </div> <!-- R1-R4C1 End -->
+        </div> <!-- R1-R4 End -->
+      </div> <!-- R1C2 End <--></-->
+  </section> <!-- End main content -->
+
+
+
+
+
+  <!-- <div class="container-fluid">
     <div class="row content">
       <div class="col-sm-3 sidenav scroll">
-        <h4>TRENDING NEWS</h4>
+        <h4>Geo-Trending</h4>
 
         <div class="input-group">
           <input type="text" class="form-control" placeholder="Search...">
@@ -52,54 +137,21 @@
             </button>
           </span>
         </div>
-        <div>
-          <hr>
-          <h4>This is a News Story</h4>
-          <h5><span class="glyphicon glyphicon-time"></span> Post by Angie Smith, Oct 5, 2018.</h5>
-          <h5><span class="label label-danger">CNN</span> <span class="label label-primary">TECH</span></h5>
-          <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia...</p>
-          <hr>
-          <h4>This is a News Story</h4>
-          <h5><span class="glyphicon glyphicon-time"></span> Post by Angie Smith, Oct 5, 2018.</h5>
-          <h5><span class="label label-danger">CNN</span> <span class="label label-primary">TECH</span></h5>
-          <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia...</p>
-          <hr>
-          <h4>This is a News Story</h4>
-          <h5><span class="glyphicon glyphicon-time"></span> Post by Angie Smith, Oct 5, 2018.</h5>
-          <h5><span class="label label-danger">CNN</span> <span class="label label-primary">TECH</span></h5>
-          <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia...</p>
-          <hr>
-          <h4>This is a News Story</h4>
-          <h5><span class="glyphicon glyphicon-time"></span> Post by Angie Smith, Oct 5, 2018.</h5>
-          <h5><span class="label label-danger">CNN</span> <span class="label label-primary">TECH</span></h5>
-          <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia...</p>
-          <hr>
-          <h4>This is a News Story</h4>
-          <h5><span class="glyphicon glyphicon-time"></span> Post by Angie Smith, Oct 5, 2018.</h5>
-          <h5><span class="label label-danger">CNN</span> <span class="label label-primary">TECH</span></h5>
-          <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia...</p>
-          <hr>
-
-        </div>
       </div>
 
-      <div class="img-map col-sm-9">
-        <ul id="country-list">
-          
-        </ul>
 
       </div>
     </div>
   </div>
-  <hr>
+  <hr> -->
 
 
-  <div class="container-fluid">    
+ <!--  <div class="container-fluid">    
     <div class="row content">
       <div class="col-sm-3 sidenav text-left">
         <h4>TRENDING ON SOCIAL</h4>
       </div>
-      <div id="top-news" class="col-sm-6 text-left scroll"> 
+      <div class="col-sm-6 text-left scroll"> 
         <h4><small>TOP NEWS</small></h4>
         <hr>
         <h3>This is a News Story</h3>
@@ -147,14 +199,24 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
 
-  <footer class="container-fluid">
+ <!--  <footer class="container-fluid">
     <p>Footer Text</p>
-  </footer>
+  </footer> -->
 
+
+  <!-- Jquery Link -->
+  <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+  crossorigin="anonymous"></script>
+  <!-- Popper Link -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+  <!-- Bootstrap 4.0.0 -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+  <!-- Javascript Link -->
   <script type="text/javascript" src="assets/javascript/app.js" ></script>
 
 </body>
 </html>
+```
