--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-```<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Geo-Trending News</title>
@@ -83,7 +83,7 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </a>
-        </div> <!-- End carousel -->
+        </div> <!-End carousel -->
 
       </div> <!-- R1C1 Start -->
       <div class="col-md-9"> <!-- R1C2 Start -->
@@ -219,4 +219,3 @@
 
 </body>
 </html>
-```
