--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
       <div class="col-md-9"> <!-- R1C2 Start -->
         <div class="row"> <!-- R1-R1 Start -->
           <div class="col-md-12"> <!-- R1-R1C1 Start -->
-            <div id="map-box" class="img-map img-thumbnail">
-            </div>
+            <div id="map" style="height:450px;background:white"></div>
             <ul id="country-list">
               Country list here
             </ul>
@@ -216,6 +215,10 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
   <!-- Javascript Link -->
   <script type="text/javascript" src="assets/javascript/app.js" ></script>
+  <!--This loads the map with the API key key=AIzaSyBb6g0T0iAgD3Q_1vsppg4dhzoO9I9j0Ys and runs the function "myMap"-->
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBb6g0T0iAgD3Q_1vsppg4dhzoO9I9j0Ys&libraries=places&callback=myMap"></script>
+  
+    <script src="assets/javascript/google-map.js"></script>
 
 </body>
 </html>
