adds firebase init and displays data on HTML

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+  <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
+
+
 </head>
 <body>
 
@@ -40,7 +44,7 @@
 
 
   <div class="container-fluid">
-    <div class="row content">
+   <!--  <div class="row content">
       <div class="col-sm-3 sidenav scroll">
         <h4>TRENDING NEWS</h4>
 
@@ -81,7 +85,7 @@
           <hr>
 
         </div>
-      </div>
+      </div> -->
 
       <div class="img-map col-sm-9">
         <ul id="country-list">
@@ -89,6 +93,8 @@
         </ul>
 
       </div>
+
+      <div id="article-box"></div>
     </div>
   </div>
   <hr>
