searches for both topic and country + refractors code

--- a/google-map.html
+++ b/google-map.html
@@ -8,7 +8,7 @@
   <div id="map" style="height:450px;background:white"></div>
 
   <!--This loads the map with the API key key=AIzaSyBb6g0T0iAgD3Q_1vsppg4dhzoO9I9j0Ys and runs the function "myMap"-->
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBb6g0T0iAgD3Q_1vsppg4dhzoO9I9j0Ys&libraries=places&callback=myMap"></script>
+<!--   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBb6g0T0iAgD3Q_1vsppg4dhzoO9I9j0Ys&libraries=places&callback=myMap"></script> -->
 
   <script src="assets/javascript/google-map.js"></script>
 
