map styling update

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ crossorigin="anonymous"></script>
 <!-- Javascript Link -->
 <script type="text/javascript" src="assets/javascript/app.js" ></script>
 <!--This loads the map with the API key key=AIzaSyBb6g0T0iAgD3Q_1vsppg4dhzoO9I9j0Ys and runs the function "myMap"-->
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBb6g0T0iAgD3Q_1vsppg4dhzoO9I9j0Ys&libraries=places&callback=myMap"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBb6g0T0iAgD3Q_1vsppg4dhzoO9I9j0Ys&callback=initMap"></script>
 
 </body>
 </html>
