map styling update

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="#">Geo-Trending News</a>
+      <a class="navbar-brand" href="#"><a href="#" class="pull-left"><img src="assets/images/logo.png"></a>
       <div class="collapse navbar-collapse" id="navbarText">
         <ul id="topic-list" class="navbar-nav mr-auto">
           <!-- Topics are populated from javascript -->
