updating styling for bookmark button

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
     <div class="row my-3"> <!-- R1 Start -->
       <div class="col-md-3"> <!-- R1C1 Start -->
         <div class="card">
-          <h4 class="card-header"> Breaking News 
-          </h4>
+          <h4 class="card-header"> Breaking News </h4>
           <div id="breaking-news-box card-block" class="article-content"> 
-            <h4 class="card-title article-title mt-3 pb-2"><a href="<!-- Article URL here -->" target="_blank"> Headline HeadlineHeadlineHeadlineHeadline </a></h4>
-            <div class="article-date card-subtitle mb-2 text-muted"> Published date </div>
-            <div class="article-text card-text mb-4"> Article textArticle textArticle textArticle textArticle textArticle textArticle textArticle texxtArticle textArticle textArticle textArticle textArticle textArticle textArticle texxtArticle textArticle textArticle textArticle textArticle textArticle textArticle text</div>
+            <p class="card-title article-title mt-3 pb-2"><a href="https://www.google.com" target="_blank"> Headline HeadlineHeadlineHeadlineHeadline </a></p>
+            <span class="article-date card-subtitle mb-2 text-muted"> Published date </span>
+            <button class="save-btn btn btn-link float-right"><i class="fa fa-bookmark" aria-hidden="true"></i></button>
+            <p class="article-text card-text mb-4"> Article textArticle textArticle textArticle textArticle textArticle textArticle textArticle texxtArticle textArticle textArticle textArticle textArticle textArticle textArticle texxtArticle textArticle textArticle textArticle textArticle textArticle textArticle text</p>
           </div>
         </div>
         <!-- <div id="breaking-news-carousel" class="carousel slide" data-ride="carousel">
@@ -127,7 +127,6 @@
                 
                 <p class="card-title article-title mt-3 pb-2"><a href="https://www.google.com" target="_blank"> Headline HeadlineHeadlineHeadlineHeadline </a></p>
                 <span class="article-date card-subtitle mb-2 text-muted"> Published date </span>
-                <!-- <i class="fa fa-bookmark" aria-hidden="true"></i> -->
                 <button class="save-btn btn btn-link float-right"><i class="fa fa-bookmark" aria-hidden="true"></i></button>
                 <p class="article-text card-text mb-4"> Article textArticle textArticle textArticle textArticle textArticle textArticle textArticle texxtArticle textArticle textArticle textArticle textArticle textArticle textArticle texxtArticle textArticle textArticle textArticle textArticle textArticle textArticle text</p>
 
