Footer & Google News API

--- a/index.html
+++ b/index.html
@@ -151,10 +151,73 @@
 </div>
 </div>
 
-  <!-- <footer class="container-fluid">
-    <p>Footer Text</p>
-  </footer>
--->
+       <footer class="container-fluid">
+    <div>
+              <a href="#">
+              <img title="Twitter" alt="Twitter" src="assets/images/twitter.png" width="40" height="40" />
+              </a>
+              <a href="#">
+              <img title="Facebook" alt="Facebook" src="assets/images/facebook.png" width="40" height="40" />
+              </a>
+              <a href="#">
+              <img title="LinkedIn" alt="LinkedIn" src="assets/images/linkedin.png" width="40" height="40" />
+              </a>
+              <a href="#">
+              <img title="Youtube" alt="Youtube" src="assets/images/youtube.png" width="40" height="40" />
+              </a>
+              <a href="#">
+              <img title="RSS" alt="RSS" src="assets/images/rss.png" width="40" height="40" />
+              </a>
+              <a href="#">
+              <img title="GooglePlus" alt="GooglePlus" src="assets/images/google-plus.png" width="40" height="40" />
+              </a>
+
+               <p id= "footertopdiv">© 2017 www.geotrends.com Geo Trends Inc.</p>
+
+    </div>
+    <hr>
+   <div class="footerdiv">Terms of Use
+        <ul>
+          <li>Digital Products Terms of Sale</li>
+          <li>Print Products Terms of Sale</li>
+          <li>Terms of Service</li>
+          <li>Submissions & Discussions</li>
+          <li>RSS Terms of Service</li>
+          <li>Ad Choices</li>
+        </ul>
+   </div>
+   <div class="footerdiv">Get Our Media
+        <ul>
+          <li>Home Delivery</li>
+          <li>Digital Subscriptions</li>
+          <li>Gift Subscriptions</li>
+          <li>Mobile & Aps</li>
+          <li>Newsletters & Alerts</li>
+          <li>Geo Trend Live</li>
+        </ul>
+   </div>
+   <div class="footerdiv">Contact Us
+        <ul>
+          <li>Help & Contact Info</li>
+          <li>Reader Representative</li>
+          <li>Advertise</li>
+          <li>News Service & Syndicate</li>
+          <li>E-mail</li>
+          <li>Phone Numbers</li>
+        </ul>
+   </div>
+   <div class="footerdiv">About Us
+        <ul>
+          <li><a href="#"> Geo-Trend Community</a></li>
+          <li>Careers</li>
+          <li>Today's News</li>
+          <li>Events</li>
+          <li>Digital Publishing Guidelines</li>
+          <li>Geo-Trend Studios</li>
+        </ul>
+   </div> 
+   </footer>
+
 
 <!-- Jquery Link -->
 <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
