--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="#"><a href="#" class="pull-left"><img src="assets/images/logo.png"></a>
+      <a class="navbar-brand" href="#"><img src="assets/images/logo.png" height="40" width="40">GEO TRENDING NEWS</a>
       <div class="collapse navbar-collapse" id="navbarText">
 
         <div class="form-inline my-2 my-lg-0">
