--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap 4 -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-  <!-- Font -->
-  <link href="https://fonts.googleapis.com/css?family=Pontano+Sans" rel="stylesheet">
+<!-- Font -->
+<link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,500,700" rel="stylesheet">
   <!-- Icons -->
   <script src="https://use.fontawesome.com/9d781571f0.js"></script>
   <!-- Stylesheet -->
