--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
     <div class="row my-3"> <!-- R1 Start -->
       <div class="col-md-3"> <!-- R1C1 Start -->
         <div class="card">
-          <h4 class="card-header"> Breaking News </h4>
+          <h4 class="card-header"> Happening Now </h4>
           <div id="breaking-news-box card-block" class="article-content"> 
-            <p class="card-title article-title mt-3 pb-2"><a href="https://www.google.com" target="_blank"> Headline HeadlineHeadlineHeadlineHeadline </a></p>
+            <!-- <p class="card-title article-title mt-3 pb-2"><a href="https://www.google.com" target="_blank"> Headline HeadlineHeadlineHeadlineHeadline </a></p> -->
             <span class="article-date card-subtitle mb-2 text-muted"> Published date </span>
             <button class="save-btn btn btn-link float-right"><i class="fa fa-bookmark" aria-hidden="true"></i></button>
-            <p class="article-text card-text mb-4"> Article textArticle textArticle textArticle textArticle textArticle textArticle textArticle texxtArticle textArticle textArticle textArticle textArticle textArticle textArticle texxtArticle textArticle textArticle textArticle textArticle textArticle textArticle text</p>
+            <p class="article-text card-text mb-4"> </p>
           </div>
         </div>
       </div> <!-- R1C1 Start -->
