--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="#"><img src="assets/images/logo.png" height="40" width="40">GEO TRENDING NEWS</a>
+      <a class="navbar-brand" href="#"><img src="assets/images/logo.png" height="40" width="40" class="mr-3"><span id="logo-name"> GEO TRENDING NEWS </span></a>
       <div class="collapse navbar-collapse" id="navbarText">
-
-        
         <span class="navbar-text">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
