--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     <div class="row my-3"> <!-- R1 Start -->
       <div class="col-md-3"> <!-- R1C1 Start -->
         <div class="card">
-          <h4 id="breaking-news-header" class="card-header"> Breaking News </h4>
           <div id="breaking-news-box" class="card-block article-content"> 
+            <h4 id="breaking-news-header" class="card-header mb-2"> Breaking News </h4>
           </div>
         </div>
       </div> <!-- R1C1 Start -->
