added styling to main page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="#"><img src="assets/images/logo.png" height="40" width="40" class="mr-3"><span id="logo-name"> GEO TRENDING NEWS </span></a>
+      <a class="navbar-brand" href="#"><img src="assets/images/logo.png" height="35" width="35" class="mr-3"><span id="logo-name"> GEO TRENDING NEWS </span></a>
       <div class="collapse navbar-collapse" id="navbarText">
         <span class="navbar-text">
           <ul class="navbar-nav mr-auto">
@@ -55,13 +55,14 @@
 
   <section id="main-content-wrapper" class="mx-auto">
     <div class="row my-3"> <!-- R1 Start -->
-      <div class="col-md-3"> <!-- R1C1 Start -->
-        <div class="card">
+      <div class="col-md-3" style="padding: 0;"> <!-- R1C1 Start -->
+        <div class="card-other">
           <div id="breaking-news-box" class="card-block article-content"> 
             <h4 id="breaking-news-header" class="card-header mb-2"> Breaking News </h4>
           </div>
         </div>
       </div> <!-- R1C1 Start -->
+
       <div class="col-md-9"> <!-- R1C2 Start -->
         <div class="row"> <!-- R1-R1 Start -->
           
@@ -95,7 +96,7 @@
         </div> <!-- R1-R3 End -->
         <div class="row my-3"> <!-- R1-R4 Start -->
           <div class="col-md-12"> <!-- R1-R4C1 Start -->
-            <div class="card">
+            <div class="card-other">
               <p class="card-header"> Search Results </p>
               <div id="article-box" class="article-content">
               </div> 
