--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
 </head>
 <body>
 
+
   <header>
     <nav class="navbar navbar-toggleable-md navbar-inverse bg-faded mb-3">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <a href="index.html"><img class="logo-box" src="assets/images/placeholder.png"></a>
-      <a class="navbar-brand" href="#"><span id="logo-name"> GEO TRENDING NEWS </span></a>
+      <a class="navbar-brand" href="#"><img class="logo-holder" src="assets/images/placeholder.png"><span id="logo-name"> GEO TRENDING NEWS </span></a>
       <div class="collapse navbar-collapse" id="navbarText">
         <span class="navbar-text">
           <ul class="navbar-nav mr-auto">
