sets modal for my account details

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <ul id="sign-up" class="navbar-nav mr-auto">
 
               <li id="li-profile" class="nav-item">
-                <a class="nav-link active" href="myprofile.html">My Profile</a>
+                <a class="nav-link active" href="" data-toggle="modal" data-target="#my-account-modal">My Profile</a>
               </li>
               <li id="li-log-in" class="nav-item">
                 <a class="nav-link active" href="" data-toggle="modal" data-target="#sign-in-modal">Log In</a>
@@ -63,7 +63,7 @@
         </div>
         <div class="modal-body">
 
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum eum, perferendis nulla eos minima facere. </p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum eum, perferendis nulla eos minima facere.</p>
 
           <div class="form-group">
             <label for="email">Email address:</label>
@@ -84,6 +84,24 @@
 
           <div class="text-center">OR</div>
           <div id="firebaseui-auth-container"></div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="my-account-modal" class="modal fade">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">My Account Details</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum eum, perferendis nulla eos minima facere. </p>
 
         </div>
       </div>
