--- a/index.html
+++ b/index.html
@@ -123,9 +123,10 @@
 <section id="main-content-wrapper" class="mx-auto">
   <div class="row my-3"> <!-- R1 Start -->
     <div class="col-md-3" style="padding: 0;"> <!-- R1C1 Start -->
-      <div class="card-other">
+      <div class="card-other"> 
+      <h4 id="breaking-news-header" class="card-header mb-2"> Breaking News </h4>
         <div id="breaking-news-box" class="card-block article-content"> 
-          <h4 id="breaking-news-header" class="card-header mb-2"> Breaking News </h4>
+      
         </div>
       </div>
     </div> <!-- R1C1 Start -->
@@ -136,7 +137,7 @@
 
 
         <div class="col-md-12"> <!-- R1-R1C1 Start -->
-          <div class="card">
+          <div class="card-shadow">
             <ul id="topic-list" class="card-header list-inline my-0 py-0 px-0">
               <!-- Topics are populated from javascript -->
             </ul>
@@ -147,7 +148,7 @@
       </div> <!-- R1-R1 End -->
       <div class="row"> <!-- R1-R3 Start -->
         <div class="col-md-12"> <!-- R1-R3C1 Start -->
-          <div class="card float-right">
+          <div class="card-shadow float-right">
             <div id="search-btn-box" class="card-header float-right form-inline my-0 py-0 px-0">
 
               <input id="search-input" class="form-control mr-sm-2 tm-tag" type="text" placeholder="Search" aria-label="Search" name="tags">
