--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 </div> -->
 
 <section id="main-content-wrapper" class="mx-auto">
+  <marquee id="rolling-title-bar" behavior="scroll" direction="left"></marquee>
   <div class="row my-3"> <!-- R1 Start -->
     <div class="col-md-3" style="padding: 0;"> <!-- R1C1 Start -->
       <div class="card-other"> 
