--- a/index.html
+++ b/index.html
@@ -92,19 +92,24 @@
     </div>
   </div>
 
-  <div id="my-account-modal" class="modal fade">
+  <div id="my-account-modal" class="modal fade example-modal-lg">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
+          <div><a href="index.html"><img class="logo-box" src="assets/images/placeholder.png"></a></div>
           <h5 class="modal-title">My Account Details</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="modal-body">
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum eum, perferendis nulla eos minima facere. </p>
-
+        <div class="my-account-container">
+          <h3>My Profile</h3>
+          <div><strong>Name: </strong><span id="my-account-name" >Eva Simon</span></div>
+          <div><strong>E-mail: </strong><span id="my-account-email">abc@gmail.com</span></div>
+          <h3>My Favorite Articles</h3>
+          <div id="article-box" class="article-content">
+            <!-- Search results populate here -->
+          </div> 
         </div>
       </div>
     </div>
