working on populating my profile modal

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="modal-body">
+        <div id="my-account-box" class="modal-body">
 
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum eum, perferendis nulla eos minima facere. </p>
 
