nav and article container update

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <a href="index.html"><img class="logo-box" src="assets/images/placeholder.png"></a>
-        <a class="navbar-brand" href="#"><img class="logo-holder" src="assets/images/placeholder.png"><span id="logo-name"> GEO TRENDING NEWS </span></a>
+        <a class="navbar-brand" href="#"><span id="logo-name"> GEO TRENDING NEWS </span></a>
         <div class="collapse navbar-collapse" id="navbarText">
           <span class="navbar-text">
             <ul id="sign-up" class="navbar-nav mr-auto">
@@ -125,7 +125,7 @@
     <div class="col-md-3" style="padding: 0;"> <!-- R1C1 Start -->
       <div class="card-other"> 
       <h4 id="breaking-news-header" class="card-header mb-2"> Breaking News </h4>
-        <div id="breaking-news-box" class="card-block article-content"> 
+        <div id="breaking-news-box" class="card-block article-content-breaking"> 
       
         </div>
       </div>
@@ -167,7 +167,7 @@
         <div class="col-md-12"> <!-- R1-R4C1 Start -->
           <div class="card-other">
             <p class="card-header"> Search Results </p>
-            <div id="article-box" class="article-content">
+            <div id="article-box" class="article-content-news">
             </div> 
           </div> <!-- R1-R4C1 End -->
         </div> <!-- R1-R4 End -->
