logo click goes to the top of the page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a href="index.html"><img class="logo-box" src="assets/images/placeholder.png"></a>
+        <a href="#"><img class="logo-box" src="assets/images/placeholder.png"></a>
         <a class="navbar-brand" href="#"><span id="logo-name"> GEO TRENDING NEWS </span></a>
         <div class="collapse navbar-collapse" id="navbarText">
           <span class="navbar-text">
