sort of fixed the issue with adding favorites multiple times

--- a/index.html
+++ b/index.html
@@ -62,8 +62,6 @@
         </div>
         <div class="modal-body">
 
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum eum, perferendis nulla eos minima facere.</p>
-
           <div class="form-group">
             <label for="email">Email address:</label>
             <input id="email-input" type="email" class="form-control">
@@ -102,8 +100,8 @@
 
         <div class="my-account-container">
           <h3>My Profile</h3>
-          <div><strong>Name: </strong><span id="my-account-name" >Eva Simon</span></div>
-          <div><strong>E-mail: </strong><span id="my-account-email">abc@gmail.com</span></div>
+          <div><strong>Name: </strong><span id="my-account-name"></span></div>
+          <div><strong>E-mail: </strong><span id="my-account-email"></span></div>
           <h3>My Favorite Articles</h3>
           <div id="saved-article-box" class="article-content">
             <!-- Search results populate here -->
