backtracking on article layout

--- a/index.html
+++ b/index.html
@@ -124,7 +124,6 @@
         <h4 id="breaking-news-header" class="card-header mx-auto mb-3 p-2"> Breaking News <i class="fa fa-caret-square-o-down float-right" aria-hidden="true"></i></h4>
         <div id="breaking-news-box" data-empty="true"> 
           <!-- Breaking News headlines populate here -->
-
         </div>
       </div>
     </div>
@@ -150,7 +149,6 @@
                   <i class="fa fa-search" aria-hidden="true"></i>
                 </button>
               </div>
-              <!-- <button id="search-btn" class="search-btn btn"><i class="fa fa-search" aria-hidden="true"></i></button> -->
             </div>
           </div>
         </div> 
@@ -160,7 +158,7 @@
           <div class="card-other">
             <p class="card-header"> Search Results </p>
 
-            <div id="article-box" class="article-content-news">
+            <div id="article-box" class="article-content">
 
               <!-- Search results populate here -->
 
@@ -180,6 +178,8 @@
    © 2017 Geo Trending News
   </div>
 </footer>
+
+
 
 
 <!-- Jquery Link -->
