adds css for login modal

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
+          <div><a href="index.html"><img class="logo-box" src="assets/images/placeholder.png"></a></div>
           <h5 class="modal-title">Please Log In!</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
